Refactored and added test cases
Signed-off-by: Fredrick <freddricklourduraj@gmail.com>